# StockenBoard

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  _full_check.py  build_out.txt  bump-version.js  check_i18n.js  index.html  package-lock.json  package.json  test_api.py  tsconfig.test.json  vitest.config.ts
.github/workflows/: auto-release.yml  release.yml  test.yml  version-bump.yml
docs/: ai-review-prompts.md  extra-fields.md  request-logic-flow.md  standard-fields.md
scripts/: build-server.mjs  bump-version.mjs
src/: App.css  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  binance_test.txt  build_err.txt  check.json  clippy.txt  clippy_pedantic.txt  error.txt  error2.txt  error_cargo.txt  error_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proptest-regressions/notifications/: token_estimator.txt
src-tauri/proptest-regressions/notifications/tests/: cooldown.txt
src-tauri/scripts/: build-server.ps1  build-server.sh
src-tauri/src/: api_server.rs  commands.rs  config.rs  core_state.rs  db.rs  events.rs  icons.rs  lib.rs  main.rs  polling.rs
src-tauri/src/api/: ai.rs  mod.rs  notifications.rs  prices.rs  providers.rs  static_files.rs  subscriptions.rs  system.rs  views.rs  ws.rs
src-tauri/src/commands/: data.rs  icons.rs  mod.rs  notifications.rs  prices.rs  providers.rs  subscriptions.rs  system.rs  views.rs
src-tauri/src/db/: history.rs  mod.rs  notifications.rs  providers.rs  schema.rs  settings.rs  subscriptions.rs  views.rs
src-tauri/src/notifications/: ai_evaluator.rs  ai_scheduler.rs  crypto.rs  dispatcher.rs  engine.rs  evaluator.rs  global_cooldown.rs  mod.rs  models.rs  telegram.rs  tests.rs  token_estimator.rs  webhook.rs
src-tauri/src/notifications/tests/: ai_evaluation.rs  ai_evaluation_config.rs  ai_evaluation_parse.rs  ai_evaluation_prompt.rs  ai_evaluation_property.rs  ai_evaluation_scheduler.rs  cooldown.rs  dispatching.rs  history_record.rs  mod.rs  rule_evaluation.rs
src-tauri/src/providers/: alpaca.rs  alphavantage.rs  binance.rs  bitfinex.rs  bitquery.rs  bybit.rs  coinapi.rs  coinbase.rs  coingecko.rs  coinmarketcap.rs  coinpaprika.rs  cryptocompare.rs  eodhd.rs  fcsapi.rs  finnhub.rs  fmp.rs  gateio.rs  htx.rs  jupiter.rs  kraken.rs  kucoin.rs  marketstack.rs  mboum.rs  mexc.rs  mod.rs  okx.rs  okx_dex.rs  polygon.rs  polymarket.rs  raydium.rs  registry.rs  subgraph.rs  tiingo.rs  traits.rs  twelvedata.rs  types.rs  ws_binance.rs  yahoo.rs
src-tauri/tests/: ai_ollama_live_test.rs  api_404_test.rs  api_cors_test.rs  api_crud_roundtrip_test.rs  db_path_parameterization_test.rs  local_channel_delete_prevention_test.rs  shutdown_test.rs  spa_fallback_test.rs  static_file_mime_cache_test.rs  token_estimator_auto_trim_property_test.rs  ws_broadcast_test.proptest-regressions  ws_broadcast_test.rs
src/components/: Icons.tsx
src/components/AlertSidebar/: AlertSidebar.css  AlertSidebar.filter.property.test.ts  AlertSidebar.filter.test.tsx  AlertSidebar.property.test.ts  AlertSidebar.tsx
src/components/AssetCard/: AssetCard.css  AssetCard.tsx  AssetEditPanel.tsx  AssetIcon.tsx  CountdownCircle.tsx
src/components/BatchActions/: BatchActions.css  BatchActions.tsx
src/components/BulkDelete/: BulkDelete.tsx
src/components/ConfirmDialog/: ConfirmDialog.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx
src/components/DashboardToolbar/: DashboardToolbar.tsx
src/components/DexPage/: DexCard.css  DexCard.tsx  DexEditPanel.tsx  DexPage.css  DexPage.tsx  DexSubscriptionManager.tsx
src/components/EditPanel/: EditPanelShell.tsx
src/components/HistoryPage/: HistoryChart.test.tsx  HistoryChart.tsx  HistoryPage.css  HistoryPage.tsx  HistorySidebar.test.tsx  HistorySidebar.tsx  HistoryTable.tsx  batch-confirm.property.test.ts  session-price.property.test.ts  startup-restore.property.test.ts  status-indicator.property.test.ts  toggle-record.property.test.ts
src/components/NotificationPage/: AiSettings.test.tsx  AiSettings.tsx  (+13 more)
src/hooks/: useAppModals.ts  useAssetData.test.ts  useAssetData.ts  useBulkDelete.ts  useConfirm.test.ts  useConfirm.ts  useEscapeKey.ts  useLocale.ts  useProviders.ts  useToast.ts  useViewToolbar.ts  useViews.ts  useVisibleSubscriptions.ts
src/lib/: TransportProvider.tsx  blobDownload.ts  db.ts  errorLog.ts  filePicker.ts  format.test.ts  format.ts  mapCommandToHttp.test.ts  priceStore.test.ts  priceStore.ts  storageKeys.ts  subscriptionApi.ts  subscriptionCompat.property.test.ts  subscriptionCompat.ts  themeData.ts  toggle-record-route.property.test.ts  tokenEstimator.property.test.ts  tokenEstimator.ts  transport.routing.test.ts  transport.ts  transport.webMode.test.ts  transport.ws.test.ts  transportProvider.tsx  transportRoutes.test.ts  transportRoutes.ts  transportWs.ts  viewUtils.test.ts  viewUtils.ts  webFileOps.test.ts  webFileOps.ts
src/test/: setup.smoke.test.tsx  setup.ts
src/types/: index.ts
(+34 files in other folders)
