[package]
name = "stockenboard"
version = "0.1.0"
description = "StockenBoard - Stock & Token Dashboard"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockenboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "net"] }
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.16"
base64 = "0.22"
tauri-plugin-shell = "2"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }


[profile.release]
opt-level = "z"     # 優化大小
lto = true          # Link Time Optimization
codegen-units = 1   # 更好的優化
strip = true        # 移除符號表
panic = "abort"     # 減少 panic 處理代碼
