[package]
name = "stockenboard"
version = "0.1.0"
description = "StockenBoard - Stock & Token Dashboard"
authors = ["you"]
edition = "2021"
default-run = "stockenboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-opener", "tauri-plugin-shell", "tauri-plugin-notification", "rfd", "tauri-build"]
server = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockenboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "net", "signal"] }
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = { version = "0.16", optional = true }
base64 = "0.22"
tauri-plugin-shell = { version = "2", optional = true }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
http = "1"
http-body-util = "0.1"

[profile.release]
opt-level = "z"     # 優化大小
lto = true          # Link Time Optimization
codegen-units = 1   # 更好的優化
strip = true        # 移除符號表
panic = "abort"     # 減少 panic 處理代碼
